--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Medaglioni_74414
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 74414-h/images/cover.jpg
 creator:
   author:
     agent_name: Nencioni, Enrico
@@ -8,6 +11,8 @@ creator:
     gutenberg_agent_id: '49121'
     url: http://www.gutenberg.org/2009/agents/49121
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/74414#Medaglioni
 gutenberg_issued: '2024-09-14'
 gutenberg_type: Text
 identifiers:
